2007-05-04  Sanel <karijes@users.sourceforge.net>

	* Added color_fltk_to_rgb and color_fltk_to_html
	* More tests for color functions and ones for above

2007-05-02  Sanel <karijes@users.sourceforge.net>

	* Added Color.{h,cpp} with color conversion functions
	* Added tests for color functions, with some tuning inside them

2007-04-29  Sanel <karijes@users.sourceforge.net>

	* Removed declaration inside loop in IconChooser
	* Added fallback in dir_home() via getpwuid_r

2007-04-27  Sanel <karijes@users.sourceforge.net>

	* IconChooser will open dialog even when directory does not exists
	* user_xxx_dir() will not return string ending with dir_separator() 
	* added system_data_dirs() and system_config_dirs() which represents
	XDG_DATA_DIRS and XDG_CONFIG_DIRS

2007-04-26  Sanel <karijes@users.sourceforge.net>

	* Added edelib-config.in, which will produce edelib-config
	* Replaced edelibconf.{h,h.in} with edelib/_conf.{h,h.in}
	so installed library can correctly find it (it will be in
	include/edelib/)
	* Added InstallProgram rule to Jamrules

2007-04-25  Sanel <karijes@users.sourceforge.net>

	* Small fix in Config class for CONFIG_USE_STDIO

2007-04-24  Sanel <karijes@users.sourceforge.net>

	* Added append(num, char) and operator+=(ch) in String
	with the tests
	* dir_list() accepts "." as directory parameter

2007-04-21  Sanel <karijes@users.sourceforge.net>

	* Added IconTheme with documentation
	* string from libstdc++ dies on assign(NULL) so
	our String's assign will trigger assertion for that case
	* Recoded Sound so it can be initialized only once during
	application lifetime

2007-04-17  Sanel <karijes@users.sourceforge.net>

	* Maded data()/substr() in String const, as this is required
	by Standard
	* Removed assertion from substr since num parameter
	represents size of returned characters
	* Added CONFIG_USE_STDIO in Config class
	* Increased buffers sizes in Config class so line/values
	can accepts huge sizes
	* Added stringtok
